SERVER-9339 ensure all rollback update/delete paths are recorded